@@ -1431,7 +1431,9 @@ See also: @lock, locktypes, enter, ENTER_OK
   \<message>
 
   This sends <message> to everyone in your location. Nothing is added to the
-  message, not even your name.
+  message, not even your name. If you have a SPEECHFORMAT attribute set, it
+  will be evaluated with <message> as %0, and | as %1, and the result will be
+  shown instead of <message> as long as it evaluates to a non-empty string.
 
   If the /room switch is given, this command acts like @lemit instead. The
   /silent switch can be used with it to suppress the confirmation for @lemit.
@@ -1444,7 +1446,7 @@ See also: @lock, locktypes, enter, ENTER_OK
   @emit can be abbreviated "\"
 
 See also: @nsemit, emit(), @pemit, @remit, @oemit, @lemit, @zemit, @cemit, 
-    NOSPOOF and SPOOFING.
+    @speechformat, NOSPOOF and SPOOFING.
 & @enable
 & @disable
   @enable <option>
@@ -2732,7 +2734,7 @@ See also: @newpassword, checkpass()
 
   See 'help @pageformat2' for examples.
 
-See also: page, speak(), @chatformat, @message
+See also: page, speak(), @chatformat, @speechformat, @message
 & @pageformat2
 & @outpageformat2
   For simple page timestamps:
@@ -3310,7 +3312,34 @@ See also: GENDER, subj(), poss(), aposs(), obj()
 
   @sitelock/remove will delete entries that were added with @sitelock
   if their host-pattern matches <string> exactly.
- 
+
+& @SPEECHFORMAT
+  @speechformat <object>[=<modifier>]
+  
+  When set, this attribute modifies everything <object> says, poses,
+  semiposes and @emits. The original text spoken/posed/emitted is passed as
+  %0, with %1 passed as " (for say), : (for pose), ; (for semipose) or |
+  (for @emit).
+  
+  If the attribute evaluates to an empty string, the original text will be
+  used. Otherwise, the result of the attribute is used.
+  
+  Example:
+    > @speechformat me=ucstr(%0)!
+    > say hello
+    You say, "HELLO!"
+    > pose waves
+    Bob WAVES!
+    
+    > @speechformat me=switch(%1,",ucstr(%0),:,lcstr(%0))
+    > say Test
+    You say, "TEST"
+    > pose Test
+    Bob test
+    > @emit Test
+    Test
+    
+See also: say, pose, @emit, @chatformat, @pageformat
 & @sql
   @sql <query>
 
@@ -4259,47 +4288,50 @@ See also: @lock, @alias, @pageformat, pose, :, ;, HAVEN, NOSPOOF, FLAGS
 & ;
 & pose
 & semipose
-  pose[/noeval] <action pose>
+  pose[/noeval] <action>
   :<action pose>
 
-  pose[/nospace] <action pose>
-  semipose[/noeval] <action pose>
+  pose[/nospace] <action>
+  semipose[/noeval] <action>
   ;<action pose>
  
-  Displays your name followed by the statement you posed.  May be
-  abbreviated by the ':' symbol. Normally, a space is placed between
-  your name and the action you are posing. If you do not wish to have
-  a space inserted, use the /nospace switch, the 'semipose' command,
-  or the ';' symbol and don't add a space between the ; and the
-  <action pose>.  The /noeval switch prevents the pose from being
-  evaluated by the parser.
+  The pose and semipose commands allow you to perform actions. Pose shows
+  your name, a space, and then <action>; semipose omits the space. They can 
+  be abbreviated to ':' and ';' respectively. The /noeval switch stops 
+  <action> from being evaluated.
+  
+  If you have a SPEECHFORMAT attribute set, it will be evaluated with
+  <action> as %0 and either : (for pose) or ; (for semipose) as %1. The 
+  result is used instead of <action>, as long as it returns a non-empty
+  string.
 
-(continued in help pose2)
+  See 'help pose2' for examples.
+See also: say, @emit, @speechformat
 & pose2
  
   Examples:
-    If you are player Bob, and you type in ':laughs out loud.' or
-    'pose laughs out loud.' everybody in the room will see:
-    "Bob laughs out loud." 
-  
-    If you are player Bob, and you type in ';'s smiling today.' or
-    'pose/nospace 's smiling today.' everybody in the room will see:
-    "Bob's smiling today."
+    > pose waves.
+    Bob waves.
+    
+    > :laughs out loud.
+    Bob laughs out loud.
+    > ;'s laughing on the inside.
+    Bob's laughing on the inside.
 & "
 & say
   say <message>
   say/noeval <message>
   "<message>
 
-  Says <message> out loud. The message will be enclosed in
-  double-quotes.  A single double-quote is the abbreviation for this
-  common command.
+  Says <message> out loud. The message will be enclosed in double-quotes.
+  A single double-quote is the abbreviation for this common command.
+  If the /noeval switch is given, <message> will not be evaluated.
+  
+  If you have a SPEECHFORMAT attribute set, it will be evaluated with
+  <message> passed as %0 and " (a double-quote) passed as %1. The result is
+  shown instead of <message>, as long as it evaluates to a non-empty string.
 
-  Say takes one switch, /noeval. The /noeval switch prevents any
-  evaluation of the message, and is handy when you want to say things
-  that use special characters like % or []'s.
-
-See also: pose, whisper
+See also: pose, whisper, @speechformat, @emit, page
 & score
   score
   
